# vatglobal-devops-interview

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
event/: admin.py  func.py  models.py  serializers.py  urls.py  views.py
event/migrations/: 0001_initial.py
snippets/: models.py  serializers.py  views.py
users/: serializers.py
users/migrations/: 0001_create_admin_user.py
utils/: func_to_ref.py
vatglobalDevopsInterview/: asgi.py  settings.py  urls.py  wsgi.py
